--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -936,6 +936,24 @@
 
         <!-- Portfolio Item -->
           <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/mainfloorhallway.jpg" class="popup-link" title="Main floor hallway">
+                    <img src="{{ media }}img/gallery/mainfloorhallwaysmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Main floor hallway
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+
+        <!-- Portfolio Item -->
+          <li>
             <article class="col-md-3 project" data-tags="exterior,balconyview">
               <div class="project-item-isotope">
                 <div class="project-image">
@@ -950,6 +968,24 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/morningtimewithGodonthebalcony.jpg" class="popup-link" title="Morning time with God on the balcony">
+                    <img src="{{ media }}img/gallery/morningtimewithGodonthebalconysmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Morning time with God on the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
@@ -1053,6 +1089,158 @@
           </li>
         <!-- Portfolio Item End -->
 
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="mainlevel,balcony">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/cardsandcoffeonthebalcony.jpg" class="popup-link" title="Coffee and cards out on the balcony">
+                    <img src="{{ media }}img/gallery/cardsandcoffeonthebalconysmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Coffee and cards out on the balcondy
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/changingseasons.jpg" class="popup-link" title="Changing seasons from the balcony">
+                    <img src="{{ media }}img/gallery/changingseasonssmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Changing seasons from the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/cooldayonthelake.jpg" class="popup-link" title="Cool day out on the lake">
+                    <img src="{{ media }}img/gallery/cooldayonthelakesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Cool day out on the lake
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/falllakecruise.jpg" class="popup-link" title="Fall lake cruise">
+                    <img src="{{ media }}img/gallery/falllakecruisesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Fall lake cruise
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/orangefallmorning.jpg" class="popup-link" title="An orange fall sunrise on the balcony">
+                    <img src="{{ media }}img/gallery/orangefallmorningsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  An orange fall sunrise on the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/purplefallmorning.jpg" class="popup-link" title="A spectacular purple fall sunrise on the balcony">
+                    <img src="{{ media }}img/gallery/purplefallmorningsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  A spectacular purple fall sunrise on the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/SDCechohollow.jpg" class="popup-link" title="Nearby Silver Dollar City's Echo Hollow nightly show">
+                    <img src="{{ media }}img/gallery/SDCechohollowsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Nearby Silver Dollar City's Echo Hollow nightly show
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/topoftherockchapel.jpg" class="popup-link" title="Top of the Rock's chapel by the lake">
+                    <img src="{{ media }}img/gallery/topoftherockchapelsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Top of the Rock's chapel by the lake
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/topoftherockdrivingrange.jpg" class="popup-link" title="Top of the Rock's driving range">
+                    <img src="{{ media }}img/gallery/topoftherockdrivingrangesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Top of the Rock's driving range
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
 
 
         </ul>
