--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -462,12 +462,12 @@
             <article class="col-md-3 project" data-tags="interior,mainlevel">
               <div class="project-item-isotope">
                 <div class="project-image">
-                  <a href="{{ media }}img/gallery/kitchen.jpg" class="popup-link" title="Fully equipped kitchen">
+                  <a href="{{ media }}img/gallery/kitchen.jpg" class="popup-link" title="Fully equipped kitchen with new appliances">
                     <img src="{{ media }}img/gallery/kitchensmall.jpg" alt="sdf">
                   </a>
                 </div>
                 <div class="project-text">
-                  Fully equipped kitchen
+                  Fully equipped kitchen with new appliances
                 </div>
               </div>
             </article>
@@ -774,7 +774,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Breakfast bar in front of kitchen
+                  Breakfast bar in front of kitchen - the appliances have been updated since this photo
                 </div>
               </div>
             </article>
