--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -35,13 +35,16 @@
       We invite you to experience our upscale condo as your very own retreat designed for large families, multiple couples, or a renewal time for just you and your spouse. Each of the 3 bedrooms (and 3 bathrooms) are tastefully decorated and updated with the most modern amenities. These are true bedrooms, not lofts or other semi-private rooms. The master suite includes not only its own private bath and a king-sized bed, but also a walkout to the balcony. The other two bedrooms have queen-sized beds.
     </p>
     <p>
-      The condo also has two separate living areas so that different activities can occur simultaneously. The main floor living area has a sleeper sofa, a queen, and boasts a 50" 1080p HD flatscreen TV (and Blu-ray player). The upper floor living area has a section with a sleeper sofa, a full, and a 42" 1080p HD flatscreen TV – and a section with a futon, a full, and game table. Also each of the 3 bedrooms have their own 40" 1080p HD flatscreen TVs, so everybody can be happy. Thus the 1664 sq. ft. condo can accommodate 12 people on beds, which includes the three traditional beds and the three foldout sofas/futon. (While we do our best to provide for your sleeping requirements, please note that sleeper sofas and futons are typically not as supportive and comfortable as regular beds.) The rental base rate is for the first 6 people, additional guests are $10/night/person.
+      The condo also has two separate living areas so that different activities can occur simultaneously. The main floor living area has a sleeper sofa, a queen, and boasts a 50" 1080p HD flatscreen TV (and Blu-ray player). The upper floor living area has a section with a sleeper sofa (a full) and a 42" 1080p HD flatscreen TV – and a section with a futon (also a full) and game table. Also each of the 3 bedrooms have their own 40" 1080p HD flatscreen TVs, so everybody can be happy. Thus the 1664 sq. ft. condo can accommodate 12 people on beds, which includes the three traditional beds and the three foldout sofas/futon. (While we do our best to provide for your sleeping requirements, please note that sleeper sofas and futons are typically not as supportive and comfortable as regular beds.)
+    </p>
+    <p>
+      The rental base rate is for the first 6 people, additional guests are $10/night/person.
     </p>
     <p>
       There is a fully-equipped galley style kitchen with a new dishwasher / new refrigerator with ice maker / new microwave, and new stove. Toaster, coffee maker (and grinder), can opener,  plates, silverware, pots and pans, and assorted cooking utensils are all provided.
     </p>
     <p>
-      Our condo is located about mid-point on a ridge in the Ozark Mountain range. If you walk down the slope you will arrive at Tablerock Lake’s water's edge by the boathouse where a slip awaits your boat; the slip is included with the rental. Have your own boat? There is a gravel parking lot where you can park your trailer after you launch - do this either next door or at Indian Point Marina.
+      Our condo is located about mid-point on a ridge in the Ozark Mountain range. If you walk down the slope you will arrive at Table Rock Lake’s water's edge by the boathouse where a slip awaits your boat; the slip is included with the rental. Have your own boat? There is a gravel parking lot here at Treehouse Condos where you can park your trailer after you launch (do this either next door or at Indian Point Marina).
     </p>
     <p>
       If you walk up the slope from the condo, you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend (free to guests). Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. The hot tubs and fitness room are operated by Treehouse Condos and are available for a nominal $20 extra fee paid directly to the Treehouse office good for the entire family for the entire stay.
@@ -56,7 +59,10 @@
 
     <h3>Location</h3>
     <p>
-      Our condo is located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Tablerock Lake. We are just over 1 mile past Silver Dollar City, so you can actually skip downtown Branson by entering from either the North or South route. Remember, our community not only has lake views, but is actually on the lake itself.
+      Our condo is located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Table Rock Lake. This is a residential community that also allows nightly rentals. It is therefore more geared to a family environment and is definitely not a “party” site. We want to maintain good relations with our neighbors, so our guests are asked to respect those around them who live here year-round.
+    </p>
+    <p>
+      We are just over 1 mile past Silver Dollar City, so you can actually skip downtown Branson by entering from either the North or South route. Remember, our community not only has lake views, but is actually on the lake itself.
     </p>
     <p>
       Book now with the confidence that you will have a great Ozark experience. Your payments are handled securely by VRBO-HomeAway and none of your credit cared information is disclosed to the owners. Your funds are fully refundable if you need to cancel, up to 30 days prior to your scheduled arrive. We are members in good standing with the Branson Chamber of Commerce.
