--- a/templates/pages/thingstodo.html
+++ b/templates/pages/thingstodo.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://www.silverdollarcity.com/theme-park.aspx" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.silverdollarcity.com/theme-park" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="https://www.sight-sound.com/WebSite/home.do" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.sight-sound.com/WebSite/home.do" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
