--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -44,10 +44,13 @@
       There is a fully-equipped galley style kitchen with a new dishwasher / new refrigerator with ice maker / new microwave, and new stove. Toaster, coffee maker (and grinder), can opener,  plates, silverware, pots and pans, and assorted cooking utensils are all provided.
     </p>
     <p>
-      Our condo is located about mid-point on a ridge in the Ozark Mountain range. If you walk down the slope you will arrive at Table Rock Lake water's edge by the boathouse. Feel free to go out on the boathouse to enjoy the view and even jump off the end for a refreshing swim. Do you have your own boat? Ask about the possibility of renting a covered boat slip for an additional fee (availability varies and must be scheduled in advance with your reservation). There is a gravel parking lot here at Treehouse Condos where you can park your trailer after you launch (do this either next door or at Indian Point Marina). 
+      Our condo is located about mid-point on a ridge in the Ozark Mountain range. If you walk down the slope you will arrive at Table Rock Lake water's edge by the boathouse. Feel free to go out on the boathouse to enjoy the view and even jump off the end for a refreshing swim
     </p>
     <p>
       If you walk up the slope from the condo, you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend (free to guests). Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. The hot tubs and fitness room are operated by Treehouse Condos and are available for a nominal $20 extra fee paid directly to the Treehouse office good for the entire family for the entire stay.
+    </p>
+    <p>
+      Do you have your own boat? Ask about the possibility of renting a covered boat slip for an additional fee of $10/night based on the number of nights you are booking. Availability varies, however, as we are working with our guests between our two different condos. Therefore, if you are interested please check first and schedule in advance with your reservation. There is a gravel parking lot here at Treehouse Condos where you can park your trailer after you launch (do this either next door or at Indian Point Marina). 
     </p>
     <p>
       Sit out on our spacious balcony and enjoy the sunrise with a cup of coffee or gather the family for steaks on the electric grill. No matter the season, the views are always awesome and the wildlife active.
