--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -81,10 +81,21 @@
     <div class="text-center">
         <a href="http://www.vrbo.com/686045/">
             <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+            <p>
+              12 Person / 3 Bedroom Condo
+            </p>
         </a>
 
         <a href="http://www.wunderground.com/cgi-bin/findweather/hdfForecast?query=65616&bannertypeclick=golfv2" target="_blank"><img src='http://weathersticker.wunderground.com/cgi-bin/banner/ban/wxBanner?zip=65616&bannertype=golfv2_cond&course=Branson'  border='0' alt='Click for forecast!' />
         </a>
+
+        <a href="http://www.vrbo.com/1023371/">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+            <p>
+              12 Person / 4 Bedroom Condo
+            </p>
+        </a>
+
     </div>
 
 
