--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -72,7 +72,13 @@
 
                         <ul class="list-footer">
                             <li><span class="box-small"><i class="social-icon-main"></i><img src="{{media}}img/bookNowOnVRBO_bw_footer.png"></span>
-                                <a href="http://www.vrbo.com/686045/">Reserve Your Stay</a>
+                                <a href="http://www.vrbo.com/686045/">Reserve Your Stay 3 Bedroom</a>
+                            </li>
+                        </ul>
+
+                        <ul class="list-footer">
+                            <li><span class="box-small"><i class="social-icon-main"></i><img src="{{media}}img/bookNowOnVRBO_bw_footer.png"></span>
+                                <a href="http://www.vrbo.com/1023371/">Reserve Your Stay 4 Bedroom</a>
                             </li>
                         </ul>
 
@@ -106,6 +112,9 @@
 
                     <a href="http://www.vrbo.com/686045/" class="social-icon-main">
                         <img src="{{media}}img/bookNowOnVRBO_bw_footer.png"></a>
+
+                        <a href="http://www.vrbo.com/1023371/" class="social-icon-main">
+                            <img src="{{media}}img/bookNowOnVRBO_bw_footer.png"></a>
 
                         <span class="divider-social"></span>
 
