--- a/templates/pages/contactus.html
+++ b/templates/pages/contactus.html
@@ -12,7 +12,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <p>The very best way to check on the availability of your desired date range is to click on this link to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. That calendar is totally up to date.</p>
+        <p>The very best way to check on the availability of your desired date range is to click on this link to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. Remember that you have two condos to choose from, so if your dates are taken on one, please check out the other. The calendars are totally up to date as we only do online bookings.</p>
     </div>
 </div>
 
