--- a/templates/pages/thingstodo.html
+++ b/templates/pages/thingstodo.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://www.silverdollarcity.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.silverdollarcity.com/theme-park" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -121,10 +121,20 @@
 <h4>Click on link for Branson attractions map</h4>
     <strong><u><a href="{{ media }}img/map-branson-attractions.jpg">Map of Branson Area Attractions</a></u></strong>
 
-<div class="text-center">
-    <a href="http://www.vrbo.com/686045/">
-        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
-    </a>
-</div>
+    <div class="text-center">
+        <a href="http://www.vrbo.com/686045/">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+            <p>
+              12 Person / 3 Bedroom Condo
+            </p>
+        </a>
+
+        <a href="http://www.vrbo.com/1023371/">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+            <p>
+              12 Person / 4 Bedroom Condo
+            </p>
+        </a>
+    </div>
 
 {% endblock %}
