--- a/templates/pages/thingstodo.html
+++ b/templates/pages/thingstodo.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="www.silverdollarcity.com/theme-park" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.silverdollarcity.com/theme-park" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
