--- a/templates/pages/rentalagreement.html
+++ b/templates/pages/rentalagreement.html
@@ -14,10 +14,20 @@
 
 
 
-<div class="text-center">
-    <a href="http://www.vrbo.com/686045/">
-        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
-    </a>
-</div>
+                <div class="text-center">
+                    <a href="http://www.vrbo.com/686045/">
+                        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+                        <p>
+                          12 Person / 3 Bedroom Condo
+                        </p>
+                    </a>
+
+                    <a href="http://www.vrbo.com/1023371/">
+                        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+                        <p>
+                          12 Person / 4 Bedroom Condo
+                        </p>
+                    </a>
+                </div>
 
 {% endblock %}
