--- a/templates/pages/availability.html
+++ b/templates/pages/availability.html
@@ -12,15 +12,24 @@
 
     <div class="row">
         <div class="col-md-12">
-            <p>The very best way to check on the availability of your desired date range is to click on this link to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. That calendar is totally up to date.</p>
+            <p>The very best way to check on the availability of your desired date range is to click on this link to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. Remember that we operate two condos, so if your dates don't work on the one, please check out the other. Those calendars are totally up to date.</p>
         </div>
     </div>
 
-<div class="text-center">
-    <a href="http://www.vrbo.com/686045/">
-        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
-    </a>
-</div>
+    <div class="text-center">
+        <a href="http://www.vrbo.com/686045/">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+            <p>
+              12 Person / 3 Bedroom Condo
+            </p>
+        </a>
+
+        <a href="http://www.vrbo.com/1023371/">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+            <p>
+              12 Person / 4 Bedroom Condo
+            </p>
+        </a>
 
 {% endblock %}
 
