--- a/templates/pages/rentalrates.html
+++ b/templates/pages/rentalrates.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-     
+
 
 <div class="row">
     <div class="col-md-12">
@@ -16,10 +16,19 @@
 </div>
 
 <div class="text-center">
-<a href="http://www.vrbo.com/686045/">
-    <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
-</a>
-</div>
+    <a href="http://www.vrbo.com/686045/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        <p>
+          12 Person / 3 Bedroom Condo
+        </p>
+    </a>
+
+    <a href="http://www.vrbo.com/1023371/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        <p>
+          12 Person / 4 Bedroom Condo
+        </p>
+    </a>
 
 
 
