--- a/templates/pages/videotour.html
+++ b/templates/pages/videotour.html
@@ -8,13 +8,13 @@
 {% endblock %}
 
 {% block content %}
-<p>Take a quick video tour of our condo to see what awaits your family</p>
+<p>Take a quick video tour of one of our condos to see what awaits your family</p>
 
 <div class="row">
     <div class="col-md-12">
         <div class="our-team">
             <div class="our-team-text">
-                <h4>Branson Tablerock Oasis Video Tour</h4>
+                <h4>Branson Tablerock Oasis (3 bedrooms) Video Tour</h4>
             </div>
 
             <div class="our-team-image">
@@ -29,7 +29,15 @@
 <div class="text-center">
     <a href="http://www.vrbo.com/686045/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        <p>
+          12 Person / 3 Bedroom Condo
+        </p>
     </a>
-</div>
 
+    <a href="http://www.vrbo.com/1023371/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        <p>
+          12 Person / 4 Bedroom Condo
+        </p>
+    </a>
 {% endblock %}
