--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -1236,8 +1236,17 @@
 <div class="text-center">
     <a href="http://www.vrbo.com/686045/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        <p>
+          12 Person / 3 Bedroom Condo
+        </p>
     </a>
-</div>
+
+    <a href="http://www.vrbo.com/1023371/">
+        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+        <p>
+          12 Person / 4 Bedroom Condo
+        </p>
+    </a>
 
 
 {% endblock %}
