--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -91,7 +91,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Master bedroom with walkout to balcony
+                  Master bedroom in 3 bedroom with walkout to balcony
                 </div>
               </div>
             </article>
@@ -143,7 +143,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Covered boathouse on the property for the boat slip, included in rental
+                  Covered boathouse on the property with boat slip that may be available to rent at the time of booking
                 </div>
               </div>
             </article>
@@ -160,7 +160,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Upper level futon and books for guests to read
+                  Upper level futon and books for guests to read in 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -177,7 +177,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Your first view upon entering our condo
+                  Your first view upon entering our 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -212,7 +212,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Second level living area
+                  Second level living area in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -263,7 +263,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Upper level bedroom
+                  Upper level bedroom in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -297,7 +297,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Leather chairs for reading or watching TV
+                  Leather chairs for reading or watching TV in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -314,7 +314,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Dining area
+                  Dining area in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -348,7 +348,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Entering the front door
+                  Entering the front door of the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -450,7 +450,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Fully equipped kitchen with new appliances
+                  Fully equipped kitchen with new appliances in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -467,7 +467,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Second bedroom on the main level
+                  Second bedroom on the main level in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -501,7 +501,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Master bedroom with en suite
+                  Master bedroom in the 3 bedroom condo with en suite
                 </div>
               </div>
             </article>
@@ -535,7 +535,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Main living area with large TV
+                  Main living area with large TV in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -620,7 +620,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  View of the main living area from above
+                  View of the main living area from above in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -654,7 +654,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Game table, futon, and reading material
+                  Game table, futon, and reading material in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -740,7 +740,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Seating and stairs going up
+                  Seating and stairs going up in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -757,7 +757,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Dining area with vaulted ceiling and lake views
+                  Dining area with vaulted ceiling and lake views in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -791,7 +791,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Full sleeper sofa on second level
+                  Full sleeper sofa on second level in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -980,7 +980,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Cross over from the parking lot to one flight of stairs
+                  Cross over from the parking lot to one flight of stairs up to the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -997,7 +997,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  One flight of stairs up from the parking lot
+                  One flight of stairs up from the parking lot to the 3 bedroom condo
                 </div>
               </div>
             </article>
