--- a/templates/pages/thingstodo.html
+++ b/templates/pages/thingstodo.html
@@ -18,7 +18,9 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://www.silverdollarcity.com/theme-park" frameborder="0" allowfullscreen></iframe>
+              <a href="https://www.silverdollarcity.com/theme-park">
+                  <img src="{{ media }}img/16tboSDCTrain.jpg" alt="#">
+              </a>
             </div>
         </div>
     </div>
