--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -87,7 +87,7 @@
         </a>
 
         <a href="http://www.vrbo.com/1023371/">
-            <img src="{{ media }}img/index-slider/bookNowOnVRBO.jpg" alt="#">
+            <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
             <p>
               12 Person / 4 Bedroom Condo
             </p>
