--- a/templates/pages/thingstodo.html
+++ b/templates/pages/thingstodo.html
@@ -19,7 +19,7 @@
 
             <div class="our-team-image">
               <a href="https://www.silverdollarcity.com/theme-park">
-                  <img src="{{ media }}img/16tboSDCTrain.jpg" alt="#">
+                  <img src="{{ media }}img/index-slider/16tboSDCTrain.jpg" alt="#">
               </a>
             </div>
         </div>
