--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -65,10 +65,12 @@
 
     <h3>Location</h3>
     <p>
-      Our condo is located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Table Rock Lake. This is a residential community that also allows nightly rentals. It is therefore more geared to a family environment and is definitely not a “party” site. We want to maintain good relations with our neighbors, so our guests are asked to respect those around them who live here year-round.
+      Our condos are located in the Treehouse Condos community on Indian Point, Branson, Missouri - right on Table Rock Lake. This is a residential community that also allows nightly rentals. It is therefore more geared to a family environment and is definitely not a “party” site. We want to maintain good relations with our neighbors, so our guests are asked to respect those around them who live here year-round.
     </p>
     <p>
       We are just over 1 mile past Silver Dollar City, so you can actually skip downtown Branson by entering from either the North or South route. Remember, our community not only has lake views, but is actually on the lake itself.
+    </p>
+    <p>Are you ready for your vacation? The very best way to check on the availability of your desired date range is to click on the links below to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and simply plug in your dates. Remember that we operate two condos, so if your dates don't work on the one, please check out the other. Those calendars are totally up to date.
     </p>
     <p>
       Book now with the confidence that you will have a great Ozark experience. Your payments are handled securely by VRBO-HomeAway and none of your credit cared information is disclosed to the owners. Your funds are fully refundable if you need to cancel, up to 30 days prior to your scheduled arrive. We are members in good standing with the Branson Chamber of Commerce.
