--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -14,7 +14,7 @@
 
                     <li><a href="{{ root }}index.html">Home</a></li>
                     <li><a href="{{ root }}photogallery.html">Photo Gallery</a></li>
-                    <li><a href="{{ root }}videotour.html">Video Tour</a></li>
+                    <li><a href="{{ root }}videotour.html">Video Tours</a></li>
                     <li><a href="{{ root }}rentalrates.html">Rental Rates</a></li>
                     <li><a href="{{ root }}availability.html">Availability</a></li>
                     <li><a href="{{ root }}rentalagreement.html">Rental Agreement</a></li>
