--- a/templates/pages/videotour.html
+++ b/templates/pages/videotour.html
@@ -24,7 +24,19 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="our-team">
+            <div class="our-team-text">
+                <h4>Branson Tablerock Oasis (4 bedrooms) Video Tour</h4>
+            </div>
 
+            <div class="our-team-image">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BclaR7GvAkY" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="text-center">
     <a href="http://www.vrbo.com/686045/">
