--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -57,12 +57,30 @@
                     </a>
                   </div>
                   <div class="project-text">
-                    Vaulted ceilings in the main level
+                    Vaulted ceilings in the main level in condo 1
                   </div>
                 </div>
               </article>
             </li>
           <!-- Portfolio Item End -->
+
+          <!-- Portfolio Item -->
+            <li>
+              <article class="col-md-3 project" data-tags="interior,mainlevel">
+                <div class="project-item-isotope">
+                  <div class="project-image">
+                    <a href="{{ media }}img/gallery/BTO2mainLRstairs.jpg" class="popup-link" title="Vaulted ceilings in the main level">
+                      <img src="{{ media }}img/gallery/BTO2mainLRstairssmall.jpg" alt="sdf">
+                    </a>
+                  </div>
+                  <div class="project-text">
+                    Looking up from the main living area in condo 2
+                  </div>
+                </div>
+              </article>
+            </li>
+          <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
@@ -100,6 +118,42 @@
 
         <!-- Portfolio Item -->
           <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2masterbed.jpg" class="popup-link" title="Master bedroom with walkout to balcony">
+                    <img src="{{ media }}img/gallery/BTO2masterbedsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Master bedroom in 4 bedroom with walkout to balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2masterbedsuite.jpg" class="popup-link" title="Master bedroom with walkout to balcony">
+                    <img src="{{ media }}img/gallery/BTO2masterbedsuitesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Master bedroom with en-suite
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+
+
+        <!-- Portfolio Item -->
+          <li>
             <article class="col-md-3 project" data-tags="exterior">
               <div class="project-item-isotope">
                 <div class="project-image">
@@ -132,6 +186,25 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2kitchen.jpg" class="popup-link" title="Breakfast bar and stairs leading to the second level">
+                    <img src="{{ media }}img/gallery/BTO2kitchensmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Granite countertops and cherry cabinets in 2nd condo kitchen
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
@@ -169,6 +242,40 @@
 
         <!-- Portfolio Item -->
           <li>
+            <article class="col-md-3 project" data-tags="interior,secondlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2upperliving.jpg" class="popup-link" title="Upper level futon and books for guests to read">
+                    <img src="{{ media }}img/gallery/BTO2upperlivingsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Upper level living area for guests in 4 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,secondlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2game.jpg" class="popup-link" title="Upper level futon and books for guests to read">
+                    <img src="{{ media }}img/gallery/BTO2gamesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Upper level game table for guests in 4 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
             <article class="col-md-3 project" data-tags="interior,mainlevel">
               <div class="project-item-isotope">
                 <div class="project-image">
@@ -178,6 +285,40 @@
                 </div>
                 <div class="project-text">
                   Your first view upon entering our 3 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2mainLRTV.jpg" class="popup-link" title="Your first view upon entering our condo">
+                    <img src="{{ media }}img/gallery/BTO2mainLRTVsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Main floor living room with balcony in our 4 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2elevator.jpg" class="popup-link" title="Fitness room">
+                    <img src="{{ media }}img/gallery/BTO2elevatorsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Elevator up to 2nd condo level from parking lot
                 </div>
               </div>
             </article>
@@ -229,7 +370,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Main living area sofa sleeper with balcony views
+                  Main living area sofa sleeper with balcony views in 1st condo
                 </div>
               </div>
             </article>
@@ -253,6 +394,25 @@
           </li>
         <!-- Portfolio Item End -->
 
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,secondlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2downfromabove.jpg" class="popup-link" title="Upper level bedroom">
+                    <img src="{{ media }}img/gallery/BTO2downfromabovesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Looking down from upper level in the 4 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+
         <!-- Portfolio Item -->
           <li>
             <article class="col-md-3 project" data-tags="interior,secondlevel">
@@ -269,6 +429,24 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,secondlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2bed4.jpg" class="popup-link" title="Upper level bedroom">
+                    <img src="{{ media }}img/gallery/BTO2bed4small.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  An upper level bedroom in the 4 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
@@ -303,6 +481,24 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,secondlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2balconyfurnishings.jpg" class="popup-link" title="Leather chairs for reading or watching TV">
+                    <img src="{{ media }}img/gallery/BTO2balconyfurnishingssmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Balcony furnishings
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
@@ -355,6 +551,24 @@
           </li>
         <!-- Portfolio Item End -->
 
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/highclearmorn.jpg" class="popup-link" title="Entrance to Treehouse Condos">
+                    <img src="{{ media }}img/gallery/highclearmornsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Clear morning view from the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
         <!-- Portfolio Item -->
           <li>
             <article class="col-md-3 project" data-tags="exterior">
@@ -382,7 +596,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Game table, games in the closet
+                  Game table, games in the closet in the 1st condo
                 </div>
               </div>
             </article>
@@ -451,6 +665,23 @@
                 </div>
                 <div class="project-text">
                   Fully equipped kitchen with new appliances in the 3 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/highmistymorn.jpg" class="popup-link" title="Fully equipped kitchen with new appliances">
+                    <img src="{{ media }}img/gallery/highmistymornsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Misty morning over the lake
                 </div>
               </div>
             </article>
@@ -536,6 +767,23 @@
                 </div>
                 <div class="project-text">
                   Main living area with large TV in the 3 bedroom condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2balconyviewfromLR.jpg" class="popup-link" title="Main living area with large TV">
+                    <img src="{{ media }}img/gallery/BTO2balconyviewfromLRsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  The view from the main living area looking out at the lake in the 2nd condo
                 </div>
               </div>
             </article>
@@ -712,6 +960,23 @@
           </li>
         <!-- Portfolio Item End -->
 
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2bed1.jpg" class="popup-link" title="Another beautiful day">
+                    <img src="{{ media }}img/gallery/BTO2bed1small.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Main level 2nd bedroom in condo 2
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
@@ -780,6 +1045,24 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,secondlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/BTO2bed3.jpg" class="popup-link" title="Full sleeper sofa on second level">
+                    <img src="{{ media }}img/gallery/BTO2bed3small.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Upper level bedroom with pocket doors in the 2nd condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
