update base overage rate

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -41,7 +41,7 @@
       Each condo also has two separate living areas so that different activities can occur simultaneously. The main floor living area has a queen sleeper sofa and boasts a 50-55" 1080p HD flatscreen TV (and Blu-ray player). The upper floor living area has a section with a sleeper sofa (a full or a queen) and a 42-50" 1080p HD flatscreen TV and movie player. One condo has a section with a futon (a full), while the other has a 4th bedroom. Both have sections with a game table. Each of the bedrooms have their own 40-43" 1080p HD flatscreen TVs, so everybody can be happy. Thus each of the 1700 sq. ft. (approx) condos can accommodate 12 people on beds, which includes the three or four traditional beds in the bedrooms and the two or three foldout sofas/futon. (While we do our best to provide for your sleeping requirements, please note that sleeper sofas and futons are typically not as supportive and comfortable as regular beds.)
     </p>
     <p>
-      The rental base rate is for the first 6 people, additional guests are $10/night/person.
+      The rental base rate is for the first 6 people. Additional guests are charged a low per person / per night fee (see detailed quote as you are booking).
     </p>
     <p>
       There is a fully-equipped galley style kitchen with a dishwasher / refrigerator with ice maker / microwave, and stove. Toaster, coffee maker (and grinder), can opener,  plates, silverware, pots and pans, and assorted cooking utensils are all provided. One has all new appliances and the other features granite countertops, and cherry floors and cabinetry in the kitchen.
