--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -32,13 +32,13 @@
 
     <h3>Oasis Condo</h3>
     <p>
-      We invite you to experience our upscale condos as your very own retreat designed for large families, multiple couples, or a renewal time for just you and your spouse. Each of the 3-4 bedrooms (and 3 bathrooms) are tastefully decorated and updated with the most modern amenities. These are true bedrooms, not lofts or other semi-private rooms. The master suite includes not only its own private bath and a king-sized bed, but also a walkout to the balcony. The other bedrooms each have queen-sized beds.
+      We invite you to experience our upscale condos as your very own retreat designed for large families, multiple couples, or a renewal time for just you and your spouse. Each of the 4 bedrooms, that’s right 4 bedrooms , (and 3 bathrooms) are tastefully decorated and updated with the most modern amenities. These are true bedrooms, not lofts or other semi-private rooms. The master suite includes not only its own private bath and a king-sized bed, but also a walkout to the balcony. The other three bedrooms have queen-sized beds.
     </p>
     <p>
       Each condo are easy to access. One is reached by elevator from the same level you park your car. Thus, it is ideal for people with mobility issues who will be able to enjoy all of the main floor amenities (2 of the bedrooms / 2 of the bathrooms / kitchen / main floor living / dining / and balcony). The other condo is reached by going up one set of stairs from the parking level. So bring your elderly parents and grandparents knowing they will have a wonderful experience!
     </p>
     <p>
-      Each condo also has two separate living areas so that different activities can occur simultaneously. The main floor living area has a queen sleeper sofa and boasts a 50-55" 1080p HD flatscreen TV (and Blu-ray player). The upper floor living area has a section with a sleeper sofa (a full or a queen) and a 42-50" 1080p HD flatscreen TV and movie player. One condo has a section with a futon (a full), while the other has a 4th bedroom. Both have sections with a game table. Each of the bedrooms have their own 40-43" 1080p HD flatscreen TVs, so everybody can be happy. Thus each of the 1700 sq. ft. (approx) condos can accommodate 12 people on beds, which includes the three or four traditional beds in the bedrooms and the two or three foldout sofas/futon. (While we do our best to provide for your sleeping requirements, please note that sleeper sofas and futons are typically not as supportive and comfortable as regular beds.)
+      The condos also have two separate living areas so that different activities can occur simultaneously. The main floor living area has a queen sleeper sofa and boasts a 50-55" 1080p HD flatscreen TV (and Blu-ray player). The upper floor living area has a section with a sleeper sofa (a full or a queen) and a 49-50" 1080p HD flatscreen TV and movie player. Both have sections with a game table. Each of the 4 bedrooms have their own 40-43" 1080p HD flatscreen TVs, so everybody can be happy. Thus each of the 1700 sq. ft. condos can accommodate 12 people on beds, which includes the four traditional beds in the bedrooms and the two foldout sofas. (While we do our best to provide for your sleeping requirements, please note that sleeper sofas are typically not as supportive and comfortable as regular beds.)
     </p>
     <p>
       The rental base rate is for the first 6 people. Additional guests are charged a low per person / per night fee (see detailed quote as you are booking).
@@ -50,10 +50,10 @@
       Our condos are located about mid-point on a ridge in the Ozark Mountain range. If you walk down the slope you will arrive at Table Rock Lake water's edge by the boathouse. Feel free to go out on the boathouse to enjoy the view and even jump off the end for a refreshing swim
     </p>
     <p>
-      If you walk up the slope from the condo (or across from the other condo), you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend (free to guests). Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. The hot tubs and fitness room are operated by Treehouse Condos and are available for a nominal $20 extra fee paid directly to the Treehouse office good for the entire family for the entire stay.
+      If you walk up the slope from the condo (or across from the other condo), you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend (free to guests). Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. The hot tubs and fitness room are operated by Treehouse Condos and are available for a nominal $20 extra fee paid directly to the Treehouse office good for the entire family for the entire stay (during their normal office hours).
     </p>
     <p>
-      Do you have your own boat? Ask about the possibility of renting a covered boat slip for an additional fee of $15/night based on the number of nights you are booking. Availability varies, however, as we are working with guests between our two different condos. Therefore, if you are interested please check first and schedule in advance with your reservation. There is a gravel parking lot here at Treehouse Condos where you can park your trailer after you launch (do this either next door or at Indian Point Marina). 
+      Do you have your own boat? Ask about the possibility of renting a covered boat slip for an additional fee of $15/night based on the number of nights you are booking. Availability varies, however, as we are working with guests between our two different condos. Therefore, if you are interested please check first and schedule in advance with your reservation. There is a gravel parking lot here at Treehouse Condos where you can park your trailer after you launch (do this at Indian Point Marina). 
     </p>
     <p>
       Sit out on our spacious balcony and enjoy the sunrise with a cup of coffee or gather the family for steaks on the electric grill. No matter the season, the views are always awesome and the wildlife active.
@@ -84,14 +84,14 @@
         <a href="http://www.vrbo.com/686045/">
             <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
             <p>
-              12 Person / 3 Bedroom Condo
+              12 Person / 4 Bedroom Condo / Our First Condo
             </p>
         </a>
 
         <a href="http://www.vrbo.com/1023371/">
             <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
             <p>
-              12 Person / 4 Bedroom Condo
+              12 Person / 4 Bedroom Condo / Our Second Condo
             </p>
         </a>
 
