--- a/templates/pages/rentalrates.html
+++ b/templates/pages/rentalrates.html
@@ -19,14 +19,14 @@
     <a href="http://www.vrbo.com/686045/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
         <p>
-          12 Person / 3 Bedroom Condo
+          12 Person / 4 Bedroom Condo / Our First Condo
         </p>
     </a>
 
     <a href="http://www.vrbo.com/1023371/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
         <p>
-          12 Person / 4 Bedroom Condo
+          12 Person / 4 Bedroom Condo / Our Second Condo
         </p>
     </a>
 
