--- a/templates/pages/videotour.html
+++ b/templates/pages/videotour.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
         <div class="our-team">
             <div class="our-team-text">
-                <h4>Branson Tablerock Oasis (3 bedrooms) Video Tour</h4>
+                <h4>Branson Tablerock Oasis (4 bedrooms - Our First Condo) Video Tour</h4>
             </div>
 
             <div class="our-team-image">
@@ -28,7 +28,7 @@
     <div class="col-md-12">
         <div class="our-team">
             <div class="our-team-text">
-                <h4>Branson Tablerock Oasis (4 bedrooms) Video Tour</h4>
+                <h4>Branson Tablerock Oasis (4 bedrooms - Our Second Condo) Video Tour</h4>
             </div>
 
             <div class="our-team-image">
@@ -42,14 +42,14 @@
     <a href="http://www.vrbo.com/686045/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
         <p>
-          12 Person / 3 Bedroom Condo
+          12 Person / 4 Bedroom Condo / Our First Condo
         </p>
     </a>
 
     <a href="http://www.vrbo.com/1023371/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
         <p>
-          12 Person / 4 Bedroom Condo
+          12 Person / 4 Bedroom Condo / Our Second Condo
         </p>
     </a>
 {% endblock %}
