--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -152,25 +152,6 @@
           </li>
         <!-- Portfolio Item End -->
 
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,mainlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/cathedralstairsbar.jpg" class="popup-link" title="Breakfast bar and stairs leading to the second level">
-                    <img src="{{ media }}img/gallery/cathedralstairsbarsmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Breakfast bar and stairs leading to the second level
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
-
         <!-- Portfolio Item -->
           <li>
             <article class="col-md-3 project" data-tags="interior,mainlevel">
@@ -412,24 +393,6 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/BTO2balconyfurnishings.jpg" class="popup-link" title="Leather chairs for reading or watching TV">
-                    <img src="{{ media }}img/gallery/BTO2balconyfurnishingssmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Balcony furnishings
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
 
         <!-- Portfolio Item -->
           <li>
@@ -799,7 +762,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  View of the main living area from above in the 3 bedroom condo
+                  View of the main living area from above in our first condo
                 </div>
               </div>
             </article>
