--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -52,6 +52,23 @@
               <article class="col-md-3 project" data-tags="interior,mainlevel">
                 <div class="project-item-isotope">
                   <div class="project-image">
+                    <a href="{{ media }}img/gallery/mainLRpaddle.jpg" class="popup-link" title="Vaulted ceilings in the main level">
+                      <img src="{{ media }}img/gallery/mainLRpaddlesmall.jpg" alt="sdf">
+                    </a>
+                  </div>
+                  <div class="project-text">
+                    Looking up from the main living area in our first condo
+                  </div>
+                </div>
+              </article>
+            </li>
+          <!-- Portfolio Item End -->
+
+          <!-- Portfolio Item -->
+            <li>
+              <article class="col-md-3 project" data-tags="interior,mainlevel">
+                <div class="project-item-isotope">
+                  <div class="project-image">
                     <a href="{{ media }}img/gallery/BTO2mainLRstairs.jpg" class="popup-link" title="Vaulted ceilings in the main level">
                       <img src="{{ media }}img/gallery/BTO2mainLRstairssmall.jpg" alt="sdf">
                     </a>
@@ -237,6 +254,25 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/upbed4in1.jpg" class="popup-link" title="Master bedroom with walkout to balcony">
+                    <img src="{{ media }}img/gallery/upbed4in1small.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Upper 4th bedroom in our first condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+
 
         <!-- Portfolio Item -->
           <li>
@@ -746,23 +782,6 @@
                 </div>
                 <div class="project-text">
                   Queen sofa sleeper
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,mainlevel,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/mainlivingfromabove.jpg" class="popup-link" title="View of the main living area from above">
-                    <img src="{{ media }}img/gallery/mainlivingfromabovesmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  View of the main living area from above in our first condo
                 </div>
               </div>
             </article>
